Removed test run statements with UseBiasedLocking